# lnu_elytra

./: .gitignore  .metadata  README.md  flutter_rust_bridge.yaml  hmos.ps1  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  local.properties  proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: log_panel.dart  toast.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/utils/: state.dart
lib/views/: responsive_shell.dart
lib/views/home/: grab_workspace.dart
lib/views/login/: login_page.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner/: Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
ohos/: build-profile.json5  oh-package.json5
ohos/AppScope/: app.json5
rust/: Cargo.toml
rust/src/: android_init.rs  frb_generated.rs  lib.rs
rust/src/api/: logging.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_lnu_elytra.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_lnu_elytra.podspec
rust_builder/ohos/: oh-package.json5
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
